# fiu-data-governance

./: .gitattributes  .gitignore  .gitmodules  README.md  go.mod  go.sum
.github/workflows/: codeql-analysis.yml
cmd/ccr-proxy/: ccr-proxy-config-debug.yaml  ccr-proxy-config.yaml
cmd/ccr-sidecar/: README.md  main.go  run.sh  sample_config.json
docs/: README.md  custompolicy.md  setup.md
docs/azure/: aks.md
docs/guidelines/: README.md
implementation/: README.md
implementation/ci/: build-ccr-sidecar.ps1  install-rust.ps1
implementation/docs/: api.md  ccr.yaml  setup.md
implementation/src/ccr-sidecar/: Cargo.toml  README.md  build.ps1  build.rs
implementation/src/ccr-sidecar/proto/: sync-proto.ps1
implementation/src/ccr-sidecar/src/: api.rs  controller.rs  logger.rs  main.rs  options.rs  request.rs  service.rs
implementation/src/ccr-sidecar/src/crypto/: api.rs  mod.rs
implementation/src/ccr-sidecar/src/crypto/providers/: azure.rs
implementation/src/ccr-sidecar/src/depa/: aa.rs  consent.rs  mod.rs
implementation/src/ccr-sidecar/src/messaging/: http.rs  mod.rs  proto.rs  serialization.rs
implementation/src/ccr-sidecar/src/policy/: mod.rs
internal/configuration/: settings.go
internal/filter/: externalprocessor.go  httpfilter.go  httpfilterfactory.go  utilities.go
samples/aa-flow-based-lending/: README.md  client.py  deploy-ccr.ps1  deploy-on-kind.ps1  deploy-registry.ps1  docker-compose.yml  generate_savings_transactions.py
samples/ocen/: README.md  ocen_policy.rego  (+2 more)
schema/: loanApplication.json  loantenure.json  loanterms.json
(+100 files in other folders)
