[package]
name = "ccr-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3"
base64 = "0.13"
chrono = "0.4"
log = "0.4"
getrandom = "0.2"
rand_core = "0.5"
uuid = { version = "0.8", features = ["v4"] }
futures = "0.3"
pin-project = "1.0"
tonic = "0.5"
prost = "0.8"
prost-types = "0.8"
serde_json = "1.0"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
tokio = { version = "1.12", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-stream = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.5"
